updates to contact, interests and projects pages

--- a/interests.html
+++ b/interests.html
@@ -74,9 +74,11 @@
             </div>
 
             <div>
-                <p class="great-vibes-font center margin-sixty">
-                    Music
-                </p>
+                <div class="margin-sixty">
+                    <p class="great-vibes-font center">
+                        Art
+                    </p>
+                </div>
                 <div class="photo-text-grid">
                     <div class="photo-text-grid__item photo-text-grid__item--1">
                         <img src="temp1.jpg" class="photo-gallery" alt="">
@@ -84,19 +86,9 @@
                     <div class="photo-text-grid__item photo-text-grid__item--2">
                         <p class="info-text-font center">
                             <br>
-                            At the age of five, I began learning piano. Honestly, I can’t say
-                            I remember much other than the fact that there were many times when
-                            I didn’t feel like practicing, annoyed by how slowly I was
-                            improving and how repetitive practicing was. I would complain about
-                            this and my parents would ask me if I wanted to quit. Every time,
-                            this question would immediately quiet me because I refused to not
-                            be able to reach a certain speed or evoke a certain emotion or
-                            achieve a certain sense of clarity or so on. Before I knew it, I
-                            found myself looking forward to the challenge of being able to
-                            overcome these struggles. I started setting more goals and I became
-                            more passionate about music. I began to try more
-                            instruments on my own time, in school and in cadet band such as the
-                            violin, flute, alto saxophone and ukulele.
+                            For me, art has always been something that has helped me stay grounded,
+                            whether it be traditional or digital art.
+                        </p>
                     </div>
                 </div>
                 <div class="memory-grid">
@@ -121,18 +113,21 @@
                 <div class="margin-thirty-sides lessons-style">
                     <p class="header-font">Lessons:</p>
                     <p class="text-font">
-                        <br>- Things don’t just show up within a day (no matter how much we may wish it). Hard work and time creates results.
-                        <br>- Being able to prioritize and managing time will improve your quality of life greatly.
-                        <br>- There are ups and downs in life but you WILL get through.
+                        <br>- You never know when opportunities might come knocking on your door so it’s important to be prepared for when it
+                        does come around.
+                        <br>- Everyone is on their own journey at their own pace. Some people may have started earlier but that doesn’t mean
+                        you won’t get their yourself.
                     </p>
                 </div>
             </div>
 
 
-            <div class="block-style">
-                <p class="great-vibes-font center margin-sixty">
-                    Music
-                </p>
+            <div class="block-style margin-sixty">
+                <div class="margin-thirty">
+                    <p class="great-vibes-font center">
+                        Athletics
+                    </p>
+                </div>
                 <div class="photo-text-grid">
                     <div class="photo-text-grid__item photo-text-grid__item--1">
                         <img src="temp1.jpg" class="photo-gallery" alt="">
@@ -185,10 +180,68 @@
             </div>
 
 
-            <div>
-                <p class="great-vibes-font center margin-sixty">
-                    Music
-                </p>
+            <div class="margin-sixty">
+                <div class="margin-thirty">
+                    <p class="great-vibes-font center margin-thirty">
+                        Gaming
+                    </p>
+                </div>
+                <div class="photo-text-grid">
+                    <div class="photo-text-grid__item photo-text-grid__item--1">
+                        <img src="temp1.jpg" class="photo-gallery" alt="">
+                    </div>
+                    <div class="photo-text-grid__item photo-text-grid__item--2">
+                        <p class="info-text-font center">
+                            <br>
+                            I’ve been playing video games for as long as I can remember.
+                            From faithfully feeding my Tamagotchi four times a day to 
+                            playing League of Legends, I’ve always loved being able to
+                            immerse myself in a different world. Along the way, I began
+                            to ask questions. How was it made? How was it being run? As
+                            I grew older, the characters, stories and dynamics of
+                            computer games, and the conversations with engineering
+                            professionals sparked my fascination and grew into a desire
+                            to experiment with coding on my own and __.
+                    </div>
+                </div>
+                <div class="memory-grid">
+                    <div class="container">
+                        <img src="temp1.jpg" class="photo-gallery memory-grid__item memory-grid__item--1">
+                        <div class="caption">
+                            <p class="memory-header-font">
+                                Favourite Memory
+                            </P>
+                            <p class="memory-text-font">
+                                One of my favourite memories is actually how I started playing League
+                                of Legends. I haven't actually started paying PC games yet. Probably
+                                an unorthodox scenario, I happened to bring my laptop over to a
+                                sleepover. My friend, an avid gamer, decided to download League on my
+                                laptop and before I knew it, I was trying out something new! Who knew
+                                something like that could lead to a passion and eventually influence
+                                my career choices?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="margin-thirty-sides lessons-style">
+                    <p class="header-font">Lessons:</p>
+                    <p class="text-font">
+                        <br>- You can never be certain of an outcome. Even if it seems like you are losing, it doesn’t mean that you can’t have
+                        a perfect next fight that can change the entire game (and vice versa).
+                        <br>- Communication and trust will make or break a team. Even with the best individual players, without these
+                        foundations, the team will not be the best.
+                        <br>- It’s important to just have fun and rewind because balance is extremely important!</p>
+                    </p>
+                </div>
+            </div>
+
+
+            <div class="block-style margin-sixty">
+                <div class="margin-thirty">
+                    <p class="great-vibes-font center">
+                        Music
+                    </p>
+                </div>
                 <div class="photo-text-grid">
                     <div class="photo-text-grid__item photo-text-grid__item--1">
                         <img src="temp1.jpg" class="photo-gallery" alt="">
@@ -214,7 +267,7 @@
                 <div class="memory-grid">
                     <div class="container">
                         <img src="temp1.jpg" class="photo-gallery memory-grid__item memory-grid__item--1">
-                        <div class="caption">
+                        <div class="caption-white">
                             <p class="memory-header-font">
                                 Favourite Memory
                             </P>
@@ -240,55 +293,7 @@
                 </div>
             </div>
 
-            <!-- <div>
-                <p class="great-vibes-font center margin-sixty">
-                    Gaming
-                </p>
-                <div>
-                    <p class="text-font">
-                        I’ve been playing video games for as long as I can remember. From faithfully feeding my Tamagotchi four times a day to
-                        playing League of Legends, I’ve always loved being able to immerse myself in a different world. Along the way, I began
-                        to ask questions. How was it made? How was it being run? As I grew older, the characters, stories and dynamics of
-                        computer games, and the conversations with engineering professionals sparked my fascination and grew into a desire to
-                        experiment with coding on my own and __.
-                    </p>
-                    <p>
-                        Favourite Memory: One of my favourite memories is actually how I started playing League of Legends. __ smth about only
-                        playing non pc games___. Probably an unorthodox scenario, I happened to bring my laptop over to a sleepover. My friend,
-                        an avid gamer, decided to download League on my laptop and before I knew it, I was trying out something new!
-                        <br>
-                        <br>
-                        Lessons:
-                        <br>- You can never be certain of an outcome. Even if it seems like you are losing, it doesn’t mean that you can’t have
-                        a perfect next fight that can change the entire game (and vice versa).
-                        <br>- Communication and trust will make or break a team. Even with the best individual players, without these
-                        foundations, the team will not be the best.
-                        <br>- It’s important to just have fun and rewind because balance is extremely important!</p>
-                </div>
-                <div class="photo-text-grid__item photo-text-grid__item--4">
-                    <img src="temp1.jpg" class="photo-gallery" alt="">
-                </div>
-                <div class="photo-text-grid__item photo-text-grid__item--5">
-                    <img src="temp1.jpg" class="photo-gallery" alt="">
-                </div>
-                <div class="photo-text-grid__item photo-text-grid__item--6">
-                    <p class="great-vibes-font center margin-sixty">
-                        Art
-                    </p>
-                    <p class="text-font">
-                        <br>
-                        <br>
-                        Art has always been something that has come and go for me.
-                        <br>
-                        <br>
-                        Lessons:
-                        <br>- You never know when opportunities might come knocking on your door so it’s important to be prepared for when it
-                        does come around.
-                        <br>- Everyone is on their own journey at their own pace. Some people may have started earlier but that doesn’t mean
-                        you won’t get their yourself.
-                    </p>
-                </div> -->
-            </div>
+
             <div class="socials-style">
                 <p>
                     <a href="contact.html" class="fa fa-envelope"></a>
