--- a/interests.html
+++ b/interests.html
@@ -40,41 +40,49 @@
             </div>
             <div class="intro-grid title-font">
                 <div class="intro-grid__item intro-grid__item--1 container">
-                    <img src="temp1.jpg" class="photo-gallery" alt="">
-                    <div class="centered">
-                        <p>
-                            art
-                        </p>
-                    </div>
+                    <a href="#art-sec" class="no-decoration">
+                        <img src="temp1.jpg" class="photo-gallery" alt="">
+                        <div class="centered">
+                            <p>
+                                art
+                            </p>
+                        </div>
+                    </a>
                 </div>
                 <div class="intro-grid__item intro-grid__item--2 container">
-                    <img src="temp2.jpg" class="photo-gallery" alt="">
-                    <div class="centered">
-                        <p>
-                            athletics
-                        </p>
-                    </div>
+                    <a href="#athletics-sec" class="no-decoration">
+                        <img src="temp2.jpg" class="photo-gallery" alt="">
+                        <div class="centered">
+                            <p>
+                                athletics
+                            </p>
+                        </div>
+                    </a>
                 </div>
                 <div class="intro-grid__item intro-grid__item--3 container">
-                    <img src="temp3.jpg" class="photo-gallery" alt="">
-                    <div class="centered">
-                        <p>
-                            gaming
-                        </p>
-                    </div>
+                    <a href="#gaming-sec" class="no-decoration">
+                        <img src="temp3.jpg" class="photo-gallery" alt="">
+                        <div class="centered">
+                            <p>
+                                gaming
+                            </p>
+                        </div>
+                    </a>
                 </div>
                 <div class="intro-grid__item intro-grid__item--4 container">
-                    <img src="temp4.jpg" class="photo-gallery" alt="">
-                    <div class="centered">
-                        <p>
-                            music
-                        </p>
-                    </div>
+                    <a href="#music-sec" class="no-decoration">
+                        <img src="temp4.jpg" class="photo-gallery" alt="">
+                        <div class="centered">
+                            <p>
+                                music
+                            </p>
+                        </div>
+                    </a>
                 </div>
             </div>
 
-            <div>
-                <div class="margin-sixty">
+            <div id='art-sec'>
+                <div class="padding-thirty margin-sixty">
                     <p class="great-vibes-font center">
                         Art
                     </p>
@@ -83,9 +91,8 @@
                     <div class="photo-text-grid__item photo-text-grid__item--1">
                         <img src="temp1.jpg" class="photo-gallery" alt="">
                     </div>
-                    <div class="photo-text-grid__item photo-text-grid__item--2">
+                    <div class="photo-text-grid__item photo-text-grid__item--2 other-vert-align">
                         <p class="info-text-font center">
-                            <br>
                             For me, art has always been something that has helped me stay grounded,
                             whether it be traditional or digital art.
                         </p>
@@ -122,19 +129,15 @@
             </div>
 
 
-            <div class="block-style margin-sixty">
+            <div id='athletics-sec' class="block-style margin-sixty">
                 <div class="margin-thirty">
                     <p class="great-vibes-font center">
                         Athletics
                     </p>
                 </div>
-                <div class="photo-text-grid">
-                    <div class="photo-text-grid__item photo-text-grid__item--1">
-                        <img src="temp1.jpg" class="photo-gallery" alt="">
-                    </div>
-                    <div class="photo-text-grid__item photo-text-grid__item--2">
+                <div class="photoo-text-grid">
+                    <div class="photoo-text-grid__item photoo-text-grid__item--1 other-vert-align">
                         <p class="info-text-font center">
-                            <br>
                             At the age of five, I began learning piano. Honestly, I can’t say
                             I remember much other than the fact that there were many times when
                             I didn’t feel like practicing, annoyed by how slowly I was
@@ -148,6 +151,9 @@
                             more passionate about music. I began to try more
                             instruments on my own time, in school and in cadet band such as the
                             violin, flute, alto saxophone and ukulele.
+                    </div>
+                    <div class="photoo-text-grid__item photoo-text-grid__item--2">
+                        <img src="temp1.jpg" class="photo-gallery" alt="">
                     </div>
                 </div>
                 <div class="memory-grid">
@@ -180,7 +186,7 @@
             </div>
 
 
-            <div class="margin-sixty">
+            <div id='gaming-sec' class="padding-thirty margin-sixty">
                 <div class="margin-thirty">
                     <p class="great-vibes-font center margin-thirty">
                         Gaming
@@ -190,9 +196,8 @@
                     <div class="photo-text-grid__item photo-text-grid__item--1">
                         <img src="temp1.jpg" class="photo-gallery" alt="">
                     </div>
-                    <div class="photo-text-grid__item photo-text-grid__item--2">
+                    <div class="photo-text-grid__item photo-text-grid__item--2 other-vert-align">
                         <p class="info-text-font center">
-                            <br>
                             I’ve been playing video games for as long as I can remember.
                             From faithfully feeding my Tamagotchi four times a day to 
                             playing League of Legends, I’ve always loved being able to
@@ -236,19 +241,18 @@
             </div>
 
 
-            <div class="block-style margin-sixty">
+            <div id='music-sec' class="block-style margin-sixty">
                 <div class="margin-thirty">
                     <p class="great-vibes-font center">
                         Music
                     </p>
                 </div>
-                <div class="photo-text-grid">
-                    <div class="photo-text-grid__item photo-text-grid__item--1">
+                <div class="photoo-text-grid">
+                    <div class="photoo-text-grid__item photoo-text-grid__item--2">
                         <img src="temp1.jpg" class="photo-gallery" alt="">
                     </div>
-                    <div class="photo-text-grid__item photo-text-grid__item--2">
+                    <div class="photoo-text-grid__item photoo-text-grid__item--1 other-vert-align">
                         <p class="info-text-font center">
-                            <br>
                             At the age of five, I began learning piano. Honestly, I can’t say
                             I remember much other than the fact that there were many times when
                             I didn’t feel like practicing, annoyed by how slowly I was
