--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Home</title>
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="W3.css">
         <link href="StyleSheet.css" rel="StyleSheet" type="text/css">
         <link href='https://fonts.googleapis.com/css?family=Great Vibes' rel='stylesheet'>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -27,9 +27,9 @@
                     <a href="resume.html">resume</a>
                     <a href="contact.html">contact</a>
                 </div>
-                <a href="#" class="logo">CATHERINE CHEN</a>
+                    <a href="#" class="logo">CATHERINE CHEN</a>
             </nav>
-        </div>  
+        </div>   
         <div class="content">
             <div class="margin-zero">                                                                                                                                                                                                                                           
                 <img class="header-photo" src="AboutMeCover.jpg" alt="About Me Cover">
@@ -54,6 +54,14 @@
                                     <p class="projects-header-style center">Tappy Cat</p>
                                     <p class="great-vibes-blurb center">keep tapping and avoid the birds</p>
                                     <div class="projects-grid margin-thirty blurb-style">
+                                        
+                                        <div class="projects-grid__item projects-grid__item--2 projects-info-style">
+                                            <p class="center">An arcade game intended to entertain players of all
+                                                ages, the game follows a magical cat that flies through the air
+                                                dodging birds. The goal is to get the highest score possible. The
+                                                game is currently available in the Google Play Store.
+                                            </p>
+                                        </div>
                                         <div class="projects-grid__item projects-grid__item--1 project-photos-grid">
                                             <div class="project-photos-grid__item project-photos-grid__item--1">
                                                 <img src="temp1.jpg" alt="" class="photo-gallery">
@@ -62,13 +70,7 @@
                                                 <img src="temp2.jpg" alt="" class="photo-gallery">
                                             </div>
                                         </div>
-                                        <div class="projects-grid__item projects-grid__item--2 projects-info-style">
-                                            <p class="center">An arcade game intended to entertain players of all
-                                                ages, the game follows a magical cat that flies through the air
-                                                dodging birds. The goal is to get the highest score possible. The
-                                                game is currently available in the Google Play Store.
-                                            </p>
-                                        </div>
+
                                     </div>
                                     <div class="tools-style projects-style">
                                         <p>
