--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
                 <p class="text-font center">designed and created by catherine chen</p>
             </div>
         </div>
+        <script>
+        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+            document.querySelector(".instagram-grid").className += " instagram-grid-mobile";
+        }
+        </script>
         <script src="Script.js"></script>
     </body>
 </html>
