--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
             </div>
         </div>
         <script>
-        // if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
             document.querySelector(".instagram-grid").className += " instagram-grid-mobile";
-        // }
+        }
         </script>
         <script src="Script.js"></script>
     </body>
