added math blurb

--- a/index.html
+++ b/index.html
@@ -108,11 +108,17 @@
             <button class="accordion">WHAT OTHERS THINK OF ME...</button>
             <div class="panel">
                 <p>" " - ICT & Business Teacher
-                <br>
-                " " - Math Teacher
-                <br>
+                <br><br>
+                "I had the pleasure of teaching Catherine Mathematics 11 & 12 and Advanced Placement 
+                Calculus. Catherine was accelerated in Math in high school and was able to complete her
+                University level Calculus in her grade 11 year. In my 35 years of teaching many
+                outstanding students, Catherine would rank amongst the best in terms of an all-round
+                student combining academics, volunteer work, personality and social responsibility. As an
+                honour roll student, she was highly regarded by both staff and peers for her excellent
+                work habits and high standard of achievement." - Math Teacher
+                <br><br>
                 " " - some prof
-                <br>
+                <br><br>
                 " " - some senior friendo
                 </p>
             </div>
