--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         </div>  
         <div class="content">
             <div class="margin-zero">                                                                                                                                                                                                                                           
-                <img class="header-photo" src="AboutMeCover.jpg" alt="About Me Cover">
+                <img class="header-photo" src="contact-cover.jpg" alt="Contact Cover">
             </div>
             <div class="margin-thirty">
                 <p class="header-font center">
