--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="photo-grid">
                 <div class="photo-grid__item photo-grid__item--1 container">
                     <a href="projects.html" alt="">
-                        <img src="temp1.jpg" class="photo-gallery photo" alt="">
+                        <img src="projects-index.jpg" class="photo-gallery photo" alt="">
                         <div class="bottom-left header-font">
                             Projects
                         </div>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="photo-grid__item photo-grid__item--2 container">
                     <a href="experiences.html" alt="">
-                        <img src="temp2.jpg" class="photo-gallery photo" alt="">
+                        <img src="experiences-index.jpg" class="photo-gallery photo" alt="">
                         <div class="bottom-left header-font">
                             Experiences
                         </div>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="photo-grid__item photo-grid__item--3 container">
                     <a href="interests.html" alt="">
-                        <img src="temp3.jpg" class="photo-gallery photo" alt="">
+                        <img src="interests-index.jpg" class="photo-gallery photo" alt="">
                         <div class="bottom-left header-font">
                             Interests
                         </div>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="photo-grid__item photo-grid__item--4 container">
                     <a href="resume.html" alt="">
-                        <img src="temp4.jpg" class="photo-gallery photo" alt="">
+                        <img src="resume-index.jpg" class="photo-gallery photo" alt="">
                         <div class="bottom-left header-font">
                             Resume
                         </div>
@@ -110,11 +110,11 @@
                 <p>" " - ICT & Business Teacher
                 <br><br>
                 "I had the pleasure of teaching Catherine Mathematics 11 & 12 and Advanced Placement 
-                Calculus. Catherine was accelerated in Math in high school and was able to complete her
-                University level Calculus in her grade 11 year. In my 35 years of teaching many
-                outstanding students, Catherine would rank amongst the best in terms of an all-round
-                student combining academics, volunteer work, personality and social responsibility. As an
-                honour roll student, she was highly regarded by both staff and peers for her excellent
+                Calculus. Catherine was accelerated in Math in high school and was able to complete her 
+                University level Calculus in her grade 11 year. In my 35 years of teaching many 
+                outstanding students, Catherine would rank amongst the best in terms of an all-round 
+                student combining academics, volunteer work, personality and social responsibility. As an 
+                honour roll student, she was highly regarded by both staff and peers for her excellent 
                 work habits and high standard of achievement." - Math Teacher
                 <br><br>
                 " " - some prof
@@ -192,10 +192,10 @@
             </div>
         </div>
         <script>
-        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+            if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
             document.querySelector(".instagram-grid").className += " instagram-grid-mobile";
-        }
-        </script>
+            }
+            /script>
         <script src="Script.js"></script>
     </body>
 </html>
