--- a/interests.html
+++ b/interests.html
@@ -29,7 +29,7 @@
         </div>  
         <div class="content">
             <div class="margin-zero">                                                                                                                                                                                                                                           
-                <img class="header-photo" src="AboutMeCover.jpg" alt="About Me Cover">
+                <img class="header-photo" src="interests-index.jpg" alt="Interests Cover">
             </div>
             <div class="interests-blurb">
                 <p class="blurb-font justify"> Without a doubt, I have been passionate about many
@@ -41,7 +41,7 @@
             <div class="intro-grid title-font">
                 <div class="intro-grid__item intro-grid__item--1 container">
                     <a href="#art-sec" class="no-decoration">
-                        <img src="temp1.jpg" class="photo-gallery" alt="">
+                        <img src="art-interests.jpg" class="photo-gallery photo-black-white" alt="">
                         <div class="centered">
                             <p>
                                 art
@@ -51,7 +51,7 @@
                 </div>
                 <div class="intro-grid__item intro-grid__item--2 container">
                     <a href="#athletics-sec" class="no-decoration">
-                        <img src="temp2.jpg" class="photo-gallery" alt="">
+                        <img src="athletics-interests.jpg" class="photo-gallery photo-black-white" alt="">
                         <div class="centered">
                             <p>
                                 athletics
@@ -61,7 +61,7 @@
                 </div>
                 <div class="intro-grid__item intro-grid__item--3 container">
                     <a href="#gaming-sec" class="no-decoration">
-                        <img src="temp3.jpg" class="photo-gallery" alt="">
+                        <img src="gaming-interests.jpg" class="photo-gallery photo-black-white" alt="">
                         <div class="centered">
                             <p>
                                 gaming
@@ -71,7 +71,7 @@
                 </div>
                 <div class="intro-grid__item intro-grid__item--4 container">
                     <a href="#music-sec" class="no-decoration">
-                        <img src="temp4.jpg" class="photo-gallery" alt="">
+                        <img src="music-interests.jpg" class="photo-gallery photo-black-white" alt="">
                         <div class="centered">
                             <p>
                                 music
@@ -89,7 +89,7 @@
                 </div>
                 <div class="photo-text-grid">
                     <div class="photo-text-grid__item photo-text-grid__item--1">
-                        <img src="temp1.jpg" class="photo-gallery" alt="">
+                        <img src="art-cover.jpg" class="photo-gallery" alt="">
                     </div>
                     <div class="photo-text-grid__item photo-text-grid__item--2 other-vert-align">
                         <p class="info-text-font center">
@@ -100,19 +100,17 @@
                 </div>
                 <div class="memory-grid">
                     <div class="container">
-                        <img src="temp1.jpg" class="photo-gallery memory-grid__item memory-grid__item--1">
+                        <img src="art-fav.jpg" class="photo-gallery memory-grid__item memory-grid__item--1">
                         <div class="caption">
                             <p class="memory-header-font">
                                 Favourite Memory
                             </P>
                             <p class="memory-text-font">
-                                At the Tom Lee Centre in Vancouver of 2014??, I
-                                played my heart out in front of two examiners in a one-hour
-                                performance. Despite my stage fright, I enjoyed the feeling of being
-                                able to demonstrate all the hard work I have put into practicing
-                                within the ten years prior. Through all the tears and smiles, and the
-                                failures and successes, I was able to come out and put on a show;
-                                thus, earning my Associate Diploma of Music in Piano Performance.
+                                For over fifty hours, I drew one of my favourite online celebrities - Janet.
+                                Although there are many occurences that come to mind when it comes to art, the
+                                amount of work and effort placed into this was unlike any other. Prior to this,
+                                I have never done a large scale portrait so upon completion, I felt a sense of
+                                pride and wonder that I was able to complete it.
                             </p>
                         </div>
                     </div>
