--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
         </div>  
         <div class="content">
             <div class="margin-zero">                                                                                                                                                                                                                                           
-                <img class="header-photo" src="AboutMeCover.jpg" alt="About Me Cover">
+                <img class="header-photo" src="resume-cover.jpg" alt="Resume Cover">
             </div>
             <div class="margin-thirty center">
                 <a href="CatherineChen_Resume.pdf" target="_blank" class="header-font no-decoration">view my resume</a>
