--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
             document.querySelector(".instagram-grid").className += " instagram-grid-mobile";
             }
-            /script>
+            </script>
         <script src="Script.js"></script>
     </body>
 </html>
