--- a/projects.html
+++ b/projects.html
@@ -535,7 +535,7 @@
             </div>
         </div>
         <script>
-        if ((/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent))) {
+        if (!(/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent))) {
             document.querySelectorAll(".flex-container > div").forEach(el => el.style.cssText += "width: 175px; margin: 30px 50px;");
         }
         </script>
