--- a/projects.html
+++ b/projects.html
@@ -535,9 +535,9 @@
             </div>
         </div>
         <script>
-        // if ((/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent))) {
-            // document.querySelectorAll(".flex-container > div").forEach(el => el.style.cssText += "width: 175px; margin: 30px 50px;");
-        // }
+        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+            document.querySelectorAll(".flex-container").style.display = "block";
+        }
         </script>
         <script src="Script.js"></script>
     </body>
